<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:id="@+id/nav_graph"
    app:startDestination="@id/FragmentLogin">
    <fragment
        android:id="@+id/FragmentLogin"
        android:name="com.ma.androidlab.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/BookListFragment"
        android:name="com.ma.androidlab.book.books.BookListFragment"
        android:label="@string/book_list_fragment_label"
        tools:layout="@layout/fragment_book_list" >
        <action
            android:id="@+id/action_BookListFragment_to_BookEditFragment"
            app:destination="@id/BookEditFragment"
            app:enterAnim="@anim/slide_in"
            app:exitAnim="@anim/slide_out"
            app:popEnterAnim="@anim/slide_in"
            app:popExitAnim="@anim/slide_out"/>
    </fragment>
    <fragment
        android:id="@+id/BookEditFragment"
        android:name="com.ma.androidlab.book.book.BookEditFragment"
        android:label="@string/book_edit_fragment_label"
        tools:layout="@layout/fragment_book_edit" >
        <action
            android:id="@+id/action_BookEditFragment_to_BookListFragment"
            app:destination="@id/BookListFragment"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
    </fragment>
</navigation>